fixed channel and tag row border animation

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -413,7 +413,7 @@
             background: linear-gradient(to right, var(--mainColor) 50%, transparent 50%);
             background-size: 200% 100%;
             background-position: right bottom;
-            transition: 0.2s ease, border 0.4s;
+            transition: 0.2s background ease;
         }
 
             .channelRow:hover {
@@ -421,7 +421,7 @@
                 background: linear-gradient(to right, var(--mainColor) 50%, transparent 50%);
                 background-size: 200% 100%;
                 background-position: left bottom;
-                transition: 0.4s ease, border 0s;
+                transition: 0.4s background ease;
             }
 
                 .channelRow:hover td {
@@ -450,7 +450,7 @@
             background: linear-gradient(to right, #daa520 50%, transparent 50%);
             background-size: 200% 100%;
             background-position: right bottom;
-            transition: 0.2s ease;
+            transition: 0.2s background ease;
         }
 
             .locked:hover {
@@ -458,7 +458,7 @@
                 background: linear-gradient(to right, #daa520 50%, transparent 50%);
                 background-size: 200% 100%;
                 background-position: left bottom;
-                transition: 0.4s ease;
+                transition: 0.4s background ease;
             }
 
                 .locked:hover .deleteChannelButton:hover {
