--- a/SubBox/wwwroot/localbrowser.html
+++ b/SubBox/wwwroot/localbrowser.html
@@ -9,6 +9,8 @@
         body {
             font-family: 'Roboto', sans-serif;
             font-size: 16px;
+            width: 100%;
+            height: 100%;
             color: #fafafa;
             background: #080808;
             padding: 0;
@@ -102,7 +104,7 @@
             border-image: linear-gradient(to top right, #8f54f1, #00efbf);
             border-image-slice: 1;
             border-style: solid;
-            border-width: 2px;
+            border-width: 3px;
             cursor: pointer;
         }
 
@@ -110,7 +112,7 @@
                 border-image: linear-gradient(to top right,#ff7500,#ce01ff);
                 border-image-slice: 1;
                 border-style: solid;
-                border-width: 2px;
+                border-width: 3px;
             }
 
         .channelPic {
@@ -302,6 +304,10 @@
                     this.videos = await result.json();
                 },
                 select(video) {
+                    window.scrollTo(0, 0);
+
+                    document.body.style.overflow = "hidden";
+
                     this.selectedDir = video.Value.dir; 
 
                     this.selectedSize = Math.round(video.Value.size/(1024*1024) *10)/10;
@@ -317,6 +323,8 @@
                 },
                 back() {
                     this.selectedDir = "";
+
+                    document.body.style.overflow = "auto";
                 },
             },
             el: "#app",
