fixed select background

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -152,7 +152,7 @@
         select {
             width: calc(35% + 52px);
             height: 32px;
-            background: var(--bg);
+            background: var(--nav_bg);
             color: var(--font_title);
             font-size: 14px;
             font-weight: bold;
